--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fast Fast Forms</title>
+    <link rel="icon" type="image/png" href="images/main-logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -12,33 +13,55 @@
 </head>
 
 <body class="bootstrap">
-    <div class="container">
-        <!-- Header -->
-        <!-- <header class="app-header">
-            <h1>Fast Fast Forms</h1>
-            <p class="subtitle">Transform text to form fields with ease</p>
-        </header> -->
+    <div class="container layout-shell">
+        <!-- Sidebar -->
+        <aside class="sidebar">
+            <section class="section version-section">
+                <div class="version-selector version-selector--one-line">
+                    <header class="sidebar-header">
+                        <h2 class="sidebar-title">Fast Fast Forms</h2>
+                        <p class="sidebar-tagline">
+                            Turn raw field names into clean, production‑ready form markup with just a few clicks.
+                        </p>
+                    </header>
+
+                    <div class="sidebar-divider"></div>
+
+                    <div class="sidebar-group">
+                        <span class="sidebar-group-label">Version</span>
+                        <div class="version-buttons">
+                            <button id="bootstrapVersion" class="btn btn-version active" onclick="switchVersion('bootstrap')">
+                                <span class="version-icon"></span>
+                                Bootstrap
+                            </button>
+                            <button id="version3" class="btn btn-version" onclick="switchVersion('version3')">
+                                <span class="version-icon"></span>
+                                Version 2 · Modern
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="sidebar-group sidebar-theme-group">
+                        <span class="sidebar-group-label">Theme</span>
+                        <button id="themeToggleBtn" type="button" class="btn btn-tool theme-toggle-btn">
+                            Day Mode
+                        </button>
+                    </div>
+
+                    <div class="sidebar-divider sidebar-divider--muted"></div>
+
+                    <div class="sidebar-group sidebar-utility-group">
+                        <span class="sidebar-group-label">Extras</span>
+                        <a href="https://file-converter-delta-nine.vercel.app/" class="btn btn-nav sidebar-link" target="_blank">
+                            FILE CONVERTER
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </aside>
 
         <!-- Main Content -->
         <main class="main-content">
-            <!-- Version Selector -->
-            <section class="section version-section">
-                <div class="version-selector version-selector--one-line">
-                    <h3 class="version-selector-title">Select Version Format</h3>
-                    <div class="version-buttons">
-                        <button id="bootstrapVersion" class="btn btn-version active" onclick="switchVersion('bootstrap')">
-                            <span class="version-icon"></span>
-                            BOOTSTRAP VERSION
-                        </button>
-                        <button id="version3" class="btn btn-version" onclick="switchVersion('version3')">
-                            <span class="version-icon"></span>
-                            VERSION 2 - Modern Forms
-                        </button>
-                    </div>
-                    <a href="https://file-converter-delta-nine.vercel.app/" class="btn btn-nav" target="_blank">FILE CONVERTER</a>
-                </div>
-            </section>
-
             <!-- Text Transformer Section -->
             <section class="section transformer-section">
                 <div class="section-header">
@@ -118,7 +141,6 @@
                     <textarea id="generatedCodeOutput" placeholder="Generated form code will appear here..."></textarea>
                     <div class="code-buttons">
                         <button id="copyGeneratedBtn" onclick="copyGeneratedCode()" class="btn btn-primary">Copy</button>
-                        <button id="checkDuplicatesBtn" onclick="checkDuplicates()" class="btn btn-secondary">Check Duplicates</button>
                         <button id="undoColumnMergeBtn" class="undo-merge-btn">Undo Merge</button>
                     </div>
                 </div>
@@ -190,44 +212,6 @@
                 </div>
             </section>
         </main>
-    </div>
-
-    <!-- Duplicate Detection Modal -->
-    <div id="duplicateModal" class="modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3>Duplicate Field Names Detected</h3>
-                <span class="close" onclick="closeDuplicateModal()">&times;</span>
-            </div>
-            <div class="modal-body">
-                <p>The following field names are duplicated in your code:</p>
-                <div id="duplicateList" class="duplicate-list">
-                    <!-- Duplicate items will be populated here -->
-                </div>
-                <p>Would you like to automatically add underscores to make the names unique?</p>
-            </div>
-            <div class="modal-footer">
-                <button onclick="fixDuplicateNames()" class="btn btn-primary">Yes, Fix Duplicates</button>
-                <button onclick="closeDuplicateModal()" class="btn btn-secondary">No, Keep As Is</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- No Duplicates Found Modal -->
-    <div id="noDuplicatesModal" class="modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3>No Duplicates Found</h3>
-                <span class="close" onclick="closeNoDuplicatesModal()">&times;</span>
-            </div>
-            <div class="modal-body">
-                <p>✅ Great! No duplicate field names were detected in your code.</p>
-                <p>All field names are unique and ready to use.</p>
-            </div>
-            <div class="modal-footer">
-                <button onclick="closeNoDuplicatesModal()" class="btn btn-primary">OK</button>
-            </div>
-        </div>
     </div>
 
     <!-- Scroll to Top Button -->
